# financial-services-accelerator/internal-webapps/org.wso2.financial.services.accelerator.consent.mgt.endpoint/src/main/resources/openapi.yaml
@@ -89,14 +89,14 @@ paths:
                   $ref: '#/components/schemas/DetailedConsentResource'
         '400':
           description: Invalid consent id
-  /consent/{consentId}:
+  /consent/{consentID}:
     get:
       tags:
         - consent
       summary: Consent retrieval
       parameters:
         - $ref: '#/components/parameters/OrgInfoHeader'
-        - $ref: '#/components/parameters/ConsentId'
+        - $ref: '#/components/parameters/ConsentID'
         - $ref: '#/components/parameters/DetailedConsent'
         - $ref: '#/components/parameters/UserId'
         - $ref: '#/components/parameters/WithAttributes'
@@ -115,7 +115,7 @@ paths:
       summary: Consent amendment
       parameters:
         - $ref: '#/components/parameters/OrgInfoHeader'
-        - $ref: '#/components/parameters/ConsentId'
+        - $ref: '#/components/parameters/ConsentID'
       requestBody:
         content:
           application/json:
@@ -171,7 +171,7 @@ paths:
                 example: Successfully updated
         '400':
           description: Invalid consent id
-  /consent/{consentId}/status:
+  /consent/{consentID}/status:
     put:
       tags:
         - consent
@@ -195,7 +195,7 @@ paths:
                 example: Status updated
         '400':
           description: Invalid consent id
-  /consent/{consentId}/history:
+  /consent/{consentID}/history:
     get:
       tags:
         - consent
@@ -286,9 +286,9 @@ components:
         - receipt
         - validityPeriod
         - recurringIndicator
-        - consentId
+        - consentID
       properties:
-        consentId:
+        consentID:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
         clientID:
@@ -327,7 +327,7 @@ components:
         - validityPeriod
         - recurringIndicator
       properties:
-        consentId:
+        consentID:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
         clientID:
@@ -536,7 +536,7 @@ components:
     ConsentUserMapping:
       type: object
       properties:
-        consentId:
+        consentID:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
         newConsentStatus:
@@ -551,7 +551,7 @@ components:
     ConsentUserMappingResponse:
       type: object
       properties:
-        consentId:
+        consentID:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
         authResource:
@@ -561,7 +561,7 @@ components:
     ConsentFile:
       type: object
       properties:
-        consentId:
+        consentID:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
         consentFile:
@@ -581,7 +581,7 @@ components:
         historyId:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
-        consentId:
+        consentID:
           type: string
           example: 604d9278-4c3b-45d5-b3bb-1e428acdf1ec
         timestamp:
@@ -613,8 +613,8 @@ components:
       description: Flag to determine whether this is an exclusive consent
       schema:
         type: boolean
-    ConsentId:
-      name: consentId
+    ConsentID:
+      name: consentID
       in: path
       description: consent id
       required: true
